fix: 🐛 style for .mw-halign-center

--- a/resources/skins.citizen.styles/skinning/content.media-common.less
+++ b/resources/skins.citizen.styles/skinning/content.media-common.less
@@ -112,5 +112,16 @@ figure[ typeof~='mw:File/Frame' ] {
 			/* @noflip */
 			float: left;
 		}
+
+		&.mw-halign-center {
+			/* @noflip */
+			margin-right: auto;
+			/* @noflip */
+			margin-left: auto;
+			/* @noflip */
+			clear: none;
+			/* @noflip */
+			float: none;
+		}
 	}
 }
